Copied README from assignment to this file for referencing.  Set up views for index and show of concert along with controllers.

--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,1 +1,10 @@
 <h1>Concerts Index</h1>
+
+<% @concerts.each do |concert| %>
+  <p>
+    <%= link_to concert.band, concert_path(concert) %> | 
+    <%= concert.venue %> | 
+    <%= concert.date %> | 
+    <%= concert.start_time.strftime("%c") %>
+  </p>
+<% end %>
