--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <main>
+      <h1>Concerts Website</h1>
+      <!--render partial here-->
+      <%= yield %>
+    </main>
   </body>
 </html>
