--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,3 +1,8 @@
 main {
   font-family: Georgia, sans-serif;
+  width: 920px;
+  padding: 10px;
+  border-radius 10px;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
