--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,22 @@
 
   <body>
     <main>
+      <nav>
+        <ul>
+          <li><%= link_to "Home", root_path %></li>
+          
+          <% if logged_in? %>
+            <li><%= link_to "Logout", session_path(current_user), method: :delete %></li>
+            <li><%= link_to "Profile", user_path(current_user) %></li>
+          <% else %>
+            <li><%= link_to "Login", new_session_path %></li>
+            <li><%= link_to "Register", new_user_path %></li>
+          <% end %>
+          
+        </ul>
+      </nav>
+      
       <h1>Concerts Website</h1>
-      <!--render partial here-->
       <%= yield %>
     </main>
   </body>
