Finished completed work on user login and registration

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1>User Show</h1>
 
 <p>
-  <%= @user.first_name %>
-  <%= @user.last_name %>
-  <%= @user.email %>
+  First Name: <%= @user.first_name %><br />
+  Last Name: <%= @user.last_name %><br />
+  Email: <%= @user.email %>
 </p>
