--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,15 @@
 <h1>Register</h1>
 
-<%= form_for(:user, url: new_user_url) do |f| %>
+<!--FIX THIS-->
+<%= form_for :user, url: url_for(controller: 'users', action: 'create') do |f| %>
   <p>
   <%= f.label :first_name %>
-  <%= f.email_field :first_name%>
+  <%= f.text_field :first_name%>
   </p>
   
   <p>
   <%= f.label :last_name %>
-  <%= f.email_field :last_name%>
+  <%= f.text_field :last_name%>
   </p>
   
   <p>
