--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <main>
+    <main class="container">
       <%= render 'shared/navbar' %>
       <%= render 'shared/errors', object: @errors %>
       <h1>Concerts Website</h1>
