--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,7 +1,7 @@
 <% if @errors %>
   <ul class="errors">
   <% @errors.each do |error| %>
-    <li style="color: red;"><%= error %></li>
+    <li><%= error %></li>
   <% end %>
   </ul>
 <% end %>
