--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <li><%= link_to "Home", root_path %></li>
     
     <% if logged_in? %>
-      <li><%= link_to "Logout", session_path(current_user), method: :delete %></li>
+      <li><%= link_to "Logout", logout_path(current_user), method: :delete %></li>
       <li><%= link_to "Profile", user_path(current_user) %></li>
     <% else %>
       <li><%= link_to "Login", new_session_path %></li>
